--- a/lyt-example/src/main/resources/templates/index.html
+++ b/lyt-example/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <title>Spring Boot File Upload / Download Rest API Example</title>
 
     <!-- Bootstrap CSS -->
-    <link href="/css/main.css" rel="stylesheet"/>
+    <link href="/static/css/main.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -47,6 +47,6 @@
 </div>
 
 <!-- Optional JavaScript -->
-<script src="/js/main.js"></script>
+<script src="/static/js/main.js"></script>
 </body>
 </html>
