--- a/my-shop/src/main/resources/static/views/test.html
+++ b/my-shop/src/main/resources/static/views/test.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>你好呀，Spring Boot</h1>
-<img src="../img/1.jpg"/>
+http://localhost:8020/views/test.html
 </body>
 </html>
