--- a/lyt-example/src/main/resources/templates/error.html
+++ b/lyt-example/src/main/resources/templates/error.html
@@ -4,5 +4,6 @@
 <h1>Something went wrong! </h1>
 <h2>Our Engineers are on it</h2>
 <a href="/static">Go Home</a>
+<a href="http://localhost:8020">返回首页</a>
 </body>
 </html>
