--- a/lyt-example/src/main/resources/templates/uploadFilePage.html
+++ b/lyt-example/src/main/resources/templates/uploadFilePage.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Spring Boot File Upload / Download Rest API Example</title>
+    <title>Spring Boot 文件上传/下载Rest API示例</title>
 
     <!-- Bootstrap CSS -->
-    <link href="/static/css/main.css" rel="stylesheet"/>
+    <link href="/css/main.css" rel="stylesheet"/>
 </head>
 <body>
 
 <noscript>
-    <h2>Sorry! Your browser doesn't support Javascript</h2>
+    <h2>对不起的！您的浏览器不支持Javascript</h2>
 </noscript>
 
 <div class="upload-container">
     <div class="upload-header">
-        <h2>Spring Boot File Upload / Download Rest API Example</h2>
+        <h2>Spring Boot 文件上传/下载Rest API示例</h2>
     </div>
     <div class="upload-content">
         <div class="single-upload">
-            <h3>Upload Single File</h3>
+            <h3>上传单个文件</h3>
             <form id="singleUploadForm" name="singleUploadForm">
                 <input id="singleFileUploadInput" type="file" name="file" class="file-input" required/>
                 <button type="submit" class="primary submit-btn">Submit</button>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="multiple-upload">
-            <h3>Upload Multiple Files</h3>
+            <h3>上传多个文件</h3>
             <form id="multipleUploadForm" name="multipleUploadForm">
                 <input id="multipleFileUploadInput" type="file" name="files" class="file-input" multiple required/>
                 <button type="submit" class="primary submit-btn">Submit</button>
@@ -47,6 +47,6 @@
 </div>
 
 <!-- Optional JavaScript -->
-<script src="/static/js/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
